<resources>
    <string name="app_name">AndroidFundamentalsProject</string>
    <string name="storyline_text">Storyline</string>
    <string name="cast_text">Cast</string>
    <string name="back_text">Back</string>
    <string name="movies_list_text">Movies List</string>
    <string name="avengers_name" >Avengers: End Game</string>
    <string name="avengers_categories">Action, Adventure, Fantasy</string>
    <string name="reviews"> REVIEWS </string>
    <string name="avengers_storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies,
        the Avengers assemble once more in order to reverse Thanos actions and restore balance to the universe.</string>
    <string-array name="avengers_actors">
        <item>Robert Downey Jr.</item>
        <item>Chris  Evans</item>
        <item>Mark Ruffalo.</item>
        <item>Chris Hemsworth</item>
    </string-array>
    <string name="avengers_num_of_reviews" translatable="false">555</string>
    <string name="avengers_age_limit">13+</string>
    <string name="avengers_duration">137 min</string>


    <string name="movie_poster">Movie poster</string>
    <string name="back_button">Back button</string>
    <string name = "error_network_failed">Network failed</string>
    <string name = "new_film_notification_name">New Movie</string>
    <string name = "new_film_notification_description">There are new movies in the app</string>
    <string name = "new_film_notification_title">There are new movie: </string>
    <string name = "schedule_watching_button_text">Schedule watching</string>
    <string name = "permission_calendar_read_explanation_message">To continue please grant access to calendar</string>
    <string name = "dialog_positive_button">OK</string>
    <string name = "dialog_negative_button">Cancel</string>
    <string name = "permission_calendar_read_denied">This feature is not available without calendar permissions. Open app settings</string>
    <string name = "schedule_movie_watching_title">Watching movie: </string>
    <string name = "error_scheduling_calendar_event">Calendar has not founded on the device</string>
</resources>