<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="movie"
            type="vlasov.ru.androidfundamentalsproject.models.Movie" />
    </data>

<ScrollView

    android:background="@color/dark_background_color"
    android:layout_height="match_parent" android:layout_width="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"

    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/moviePicture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/movie_poster"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_mask"
        app:layout_constraintBottom_toBottomOf="@+id/moviePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="254dp"
        android:text="@{movie.title}"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/moviePicture" />

    <TextView
        android:id="@+id/movieAgeRestrictions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@{Integer.toString(movie.pgAge) + '+'}"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/movieName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/movieCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@{movie.genresString}"
        android:textColor="#FF3466"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieName" />

    <TextView
        android:id="@+id/movieNumOfReviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textColor="#6D6D80"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/movieDetailsStar5"
        app:layout_constraintTop_toBottomOf="@+id/movieCategories" />

    <TextView
        android:id="@+id/movieStorylineTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/storyline_text"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieNumOfReviews" />

    <TextView
        android:id="@+id/movieStoryline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@{movie.storyLine}"
        android:textColor="#CCFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieStorylineTitle" />

    <TextView
        android:id="@+id/movieCastTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/cast_text"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieStoryline" />

    <ImageButton
        android:id="@+id/backImage"
        android:layout_width="22dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:background="@null"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_text"
        android:textColor="@color/gray_dark"
        android:id="@+id/backButtonMovie"
        app:layout_constraintBottom_toBottomOf="@+id/backImage"
        app:layout_constraintStart_toEndOf="@+id/backImage"
        app:layout_constraintTop_toTopOf="@+id/backImage" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movieCastRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movieCastTitle" />

    <ImageView
        android:id="@+id/movieDetailsStar1"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/movieNumOfReviews"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/movieNumOfReviews"
        app:srcCompat="@drawable/ic_star" />

    <ImageView
        android:id="@+id/movieDetailsStar2"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/movieDetailsStar1"
        app:layout_constraintStart_toEndOf="@+id/movieDetailsStar1"
        app:layout_constraintTop_toTopOf="@+id/movieDetailsStar1"
        app:srcCompat="@drawable/ic_star" />

    <ImageView
        android:id="@+id/movieDetailsStar3"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/movieDetailsStar2"
        app:layout_constraintStart_toEndOf="@+id/movieDetailsStar2"
        app:layout_constraintTop_toTopOf="@+id/movieDetailsStar2"
        app:srcCompat="@drawable/ic_star" />

    <ImageView
        android:id="@+id/movieDetailsStar4"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/movieDetailsStar3"
        app:layout_constraintStart_toEndOf="@+id/movieDetailsStar3"
        app:layout_constraintTop_toTopOf="@+id/movieDetailsStar3"
        app:srcCompat="@drawable/ic_star" />

    <ImageView
        android:id="@+id/movieDetailsStar5"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/movieDetailsStar4"
        app:layout_constraintStart_toEndOf="@+id/movieDetailsStar4"
        app:layout_constraintTop_toTopOf="@+id/movieDetailsStar4"
        app:srcCompat="@drawable/ic_star" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>